--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
