--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -25,6 +26,3 @@ yarn-error.log*
 
 src/firebase/firebase.config.js
 
-env.local
-
-env
